--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode", // Prettier, как форматтер по умолчанию
         "editor.codeActionsOnSave": {
-            "source.fixAll": true // работает аналогично eslint --fix
+            "source.fixAll": "explicit"
         },
     },
     "editor.formatOnSave": true
