--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,8 +25,15 @@
     ],
     /* Правила для отслеживания линтером. Если пресеты покрывают не все ситуации, 
     вы можете прописать нужные правила вручную. */
-    "rules": {
+"rules": {
         "prettier/prettier": "error", // Обязательно!! Подсвечивает ошибки из Prettier.
         "react/prop-types": 0 // Отключаем правило проверки передаваемых типов.
+    },
+    "prettier/prettier": [
+    "error",
+    {
+      "singleQuote": true,
+      "parser": "flow"
     }
+  ]
 }
