--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
           "version": "1.0.0",
           "description": "",
           "main": "index.js",
+          "type": "commonjs",
           "scripts": {
                     "build": "webpack",
                     "lint": "eslint 'src/**/*.js'",
@@ -19,7 +20,8 @@
                     "eslint-plugin-react": "^7.37.2",
                     "prettier": "2.8.8",
                     "webpack": "^5.0.0",
-                    "webpack-cli": "^4.0.0"
+                    "webpack-cli": "^4.0.0",
+                    "webpack-dev-server": "^5.1.0"
           },
           "author": "",
           "license": "ISC",
