--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-minimizer-webpack-plugin": "^3.4.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "object-assign": "^4.1.1",
     "prettier": "^2.6.1",
     "raw-loader": "^4.0.2",
     "sass": "^1.49.10",
@@ -28,5 +29,10 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
-  }
+  },
+  "browser": {
+  "fs": false,
+  "path": false,
+  "os": false
+}
 }
