--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^11.0.2",
+    "jwt-decode": "^4.0.0",
     "modern-normalize": "^1.1.0",
     "swiper": "^8.0.7"
   },
