--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "post-update": "yarn upgrade --latest"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase": "^11.0.2",
     "jwt-decode": "^4.0.0",
     "modern-normalize": "^1.1.0",
+    "pg": "^8.13.1",
     "swiper": "^8.4.7"
   },
   "devDependencies": {
