--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "firebase": "^11.0.2",
     "jwt-decode": "^4.0.0",
     "modern-normalize": "^1.1.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "pg": "^8.13.1",
+    "process": "^0.11.10",
     "swiper": "^8.4.7"
   },
   "devDependencies": {
